--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Example1</title>
+        <title>Test RxJs</title>
         <script src="bundle.js"></script>
     </head>
     <body>
