Input search example

--- a/pages/index_search.html
+++ b/pages/index_search.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <input id="input"/>
-        <ul id="list"></ul>
+        <div id="list"></div>
     </body>
 </html>
