--- a/pages/index.html
+++ b/pages/index.html
@@ -4,5 +4,8 @@
         <script src="bundle.js"></script>
     </head>
     <body>
+        <button id="refresh">Refresh</button>
+        <button id="stop">Stop</button>
+        <ul id="list"></ul>
     </body>
 </html>
