--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <body>
         <button id="refresh">Refresh</button>
         <button id="stop">Stop</button>
+        <div id="error"></div>
         <ul id="list"></ul>
     </body>
 </html>
