--- a/pages/index_list.html
+++ b/pages/index_list.html
@@ -6,6 +6,8 @@
     <body>
         <button id="refresh">Refresh</button>
         <button id="stop">Stop</button>
+        <div id="progress">In progress</div>
         <ul id="list"></ul>
+        <div id="error"></div>
     </body>
 </html>
