--- a/pages/index_multiclick.html
+++ b/pages/index_multiclick.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <button id="button">Click me!</button>
-        <div id="clicks"></div>
+        <button id="clicks"></button>
     </body>
 </html>
