--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <script src="bundle.js"></script>
     </head>
     <body>
-        <input id="input1"/>
-        <input id="input2"/>
-        <div id="output"></div>
+        <input id="input"/>
+        <div id="list"></div>
     </body>
 </html>
