Fixing list example

--- a/pages/index_list.html
+++ b/pages/index_list.html
@@ -7,7 +7,7 @@
         <button id="refresh">Refresh</button>
         <button id="stop">Stop</button>
         <div id="progress">In progress</div>
-        <ul id="list"></ul>
-        <div id="error"></div>
+        <div id="list"></div>
+        <div id="error">Errore</div>
     </body>
 </html>
