--- a/pages/index_list.html
+++ b/pages/index_list.html
@@ -2,6 +2,35 @@
     <head>
         <title>Test RxJs</title>
         <script src="bundle.js"></script>
+        <style>
+            button {
+                background: blue;
+                color: whitesmoke;
+                border-radius: 5px;
+                padding: 5px 15px;
+                border: none;
+                font-size: 16px;
+            }
+            button + button {
+                margin-left: 15px
+            }
+            #progress, #error {
+                padding: 15px 0
+            }
+            #error {
+                color: red;
+            }
+            #list ul {
+                padding: 0;
+                border: 1px solid black;
+                border-radius: 5px;
+                padding: 15px;
+            }
+            #list ul li {
+                list-style-type: none;
+                font-size: 16px;
+            }
+        </style>
     </head>
     <body>
         <button id="refresh">Refresh</button>
