--- a/pages/index_ipotenusa.html
+++ b/pages/index_ipotenusa.html
@@ -2,10 +2,31 @@
     <head>
         <title>Test RxJs</title>
         <script src="bundle.js"></script>
+        <style>
+            label {
+                font-size: 14px;
+                margin-top: 5px;
+                display: block;
+                font-weight: bold;
+            }
+            input {
+                border-radius: 5px;
+                border: 1px solid gray;
+                padding: 5px 3px;
+                display: block;
+            }
+            #output {
+                font-size: 16px;
+                font-weight: bold;
+                padding-top: 15px;
+            }
+        </style>
     </head>
     <body>
-        <input id="input1"/>
-        <input id="input2"/>
+        <label for="input1">Cateto 1</label>
+        <input name="input1" id="input1"/>
+        <label for="input2">Cateto 2</label>
+        <input name="input2" id="input2"/>
         <div id="output"></div>
     </body>
 </html>
