--- a/pages/index_multiclick.html
+++ b/pages/index_multiclick.html
@@ -2,9 +2,25 @@
     <head>
         <title>Test RxJs</title>
         <script src="bundle.js"></script>
+        <style>
+            button {
+                background: blue;
+                color: whitesmoke;
+                border-radius: 5px;
+                padding: 5px 15px;
+                border: none;
+                font-size: 16px;
+            }
+            #clicks {
+                margin-top: 15px;
+                padding: 15px;
+                font-size: 18px;
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
         <button id="button">Click me!</button>
-        <button id="clicks"></button>
+        <div id="clicks"></div>
     </body>
 </html>
